# agentd

./: .gitignore  Cargo.toml  README.md  install.sh  pyproject.toml
examples/: basic_usage.rs  gemma_test.rs  model_name_usage.rs  python_basic.py  python_gpu.py  python_simple.py
src/: cli.rs  config.rs  error.rs  lib.rs  llm.rs  main.rs  pybindings.rs
tests/: integration_tests.rs
