[package]
name = "agentd"
version = "0.1.0"
edition = "2021"

[lib]
name = "agentd"
crate-type = ["cdylib", "rlib"]

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
clap = { version = "4.0", features = ["derive"] }
pyo3 = { version = "0.22", features = ["extension-module"] }

[dev-dependencies]
tempfile = "3.0"